...
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="clear">clear</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="navigation">Navigation</string>
...
